tests/baselines/reference/tsxSpreadAttributesResolution17.errors.txt
file.tsx(18,21): error TS2607: JSX element class does not support attributes because it does not have a 'props' property.


==== file.tsx (1 errors) ====
    declare global {
        namespace JSX {
            interface Element {}
            interface ElementAttributesProperty { props: {} }
        }
    }
    declare var React: any;
    
    export class Empty extends React.Component<{}, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    declare const obj: { a: number | undefined } | undefined;
    
    // OK
    let unionedSpread = <Empty {...obj} />;
                        ~~~~~~~~~~~~~~~~~~
!!! error TS2607: JSX element class does not support attributes because it does not have a 'props' property.
    